# ap3

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pytest.yml
docs/: agentic-stack.md  architecture.md  codelab-a2a-ap3.md  codelab-privacy-agent.md  commitments.md  directives.md  extension.md  faq.md  index.md  lifecycle.md  operations.md  roadmap.md  roles.md  samples.md  security.md  w3vc-ap3.md
docs/assets/: psi-walkthrough.html
docs/functions/: psi.md  whats-coming.md
docs/sdk/: api-reference.md  configuration.md  installation.md  troubleshooting.md
docs/use-cases/: finance.md  fmcg.md  hr.md  index.md  monetize-with-service-provider.md
examples/a2a-example/: .env.example  INTEGRATION.md  Makefile  README.md  docker-compose.yml
examples/a2a-example/company_a/: Dockerfile  __main__.py  db.py  psi_client.py  pyproject.toml  test_client.py
examples/a2a-example/company_b/: Dockerfile  __main__.py  agent_executor.py  db.py  pyproject.toml  test_client.py
examples/ap3_playground/: Dockerfile  README.md  pyproject.toml
examples/ap3_playground/src/ap3_playground/: __main__.py  server.py
examples/ap3_playground/src/ap3_playground/static/: app.js  index.html  styles.css
examples/psi_adk_simple/: README.md  pyproject.toml
examples/psi_adk_simple/psi_initiator/: .env.example  agent.py
examples/psi_adk_simple/psi_receiver/: .env.example  __init__.py  agent.py
examples/psi_simple/: Dockerfile.initiator  Dockerfile.receiver  README.md  db.py  docker-compose.yml  initiator.py  pyproject.toml  receiver.py
src/ap3/: __init__.py
src/ap3/a2a/: __init__.py  _core.py  _url_safety.py  agent.py  card.py  client.py  executor.py  middleware.py  wire.py
src/ap3/core/: __init__.py  operation.py
src/ap3/services/: __init__.py  commitment.py  compatibility.py  discovery.py
src/ap3/signing/: __init__.py  canonical.py  primitives.py
src/ap3/types/: __init__.py  core.py  directive.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_commitments.py  test_psi_protocol.py
tests/unit/a2a/: test_custom_compatibility_scorer.py  test_refusals.py  test_security_invariants.py
tests/unit/operations/: __init__.py  test_operation_registry.py  test_psi.py
tests/unit/services/: __init__.py  test_commitment_manager.py  test_discovery_service.py
tests/unit/types/: __init__.py  test_core.py  test_directive.py
