[project]
name = "ap3-playground"
version = "0.1.0"
description = "AP3 playground demo (UI inspector + protocol scenarios)"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "ap3[a2a]",
  "ap3-functions",
  "uvicorn>=0.30.0",
  "starlette>=0.37.0",
]

[project.scripts]
ap3-playground = "ap3_playground.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ap3_playground"]

[tool.uv.sources]
ap3 = { workspace = true }
ap3-functions = { workspace = true }

